[package]
name = "rust-leetcode"
version = "0.1.0"
authors = ["qunhao <qunhao.song@transwarp.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
reqwest = "0.9.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"
regex = "1.3.4"
futures = { version = "0.3.3", features = ["thread-pool"] }
surf = "1.0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "rl"
path = "src/main.rs"
